# csi-robustness

./: .gitignore  .rsync_excludes  diet.py  dsprites.ipynb  main.py  pyproject.toml  requirements.txt  run.sh  run_diet.sh  unsup_diet.py
dataset_processing/: attacks.py  augmentations.py  load_datasets.py
dislib/: defaults.py  diet.py  identifiability.py  inference_main.py  main.py  probe_diet.py  probe_diet_mlp.py  r2_identifiability.py  replicate_diet.py  replicate_main.py  run.sh  run_diet.sh  run_diet2.sh  run_diet_probe.sh  run_diet_probe2.sh  run_parallel.sh  run_probes.sh  supervised.py  unsup_diet.py  unsup_diet_mlp.py
evaluation/: identifiability.py  logging.py
models/: baselines.py
optimization/: scheduler.py
