[project]
name = "csi-robustness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastargs>=1.2.0",
    "imageio>=2.37.2",
    "joblib>=1.5.2",
    "numpy>=2.3.5",
    "pyitlib>=0.3.1",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "terminaltables>=3.1.10",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
